// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`qr code modal  renders correctly 1`] = `
"<Component animationType=\\"slide\\" transparent={false} visible={false} presentationStyle=\\"overFullScreen\\" hardwareAccelerated={false}>
  <View style={{...}}>
    <CameraKitCameraScreen testID=\\"CameraKitCameraScreen\\" actions={{...}} onBottomButtonPressed={[Function: onBottomButtonPressed]} scanBarcode={true} onReadCode={[Function: onReadCode]} />
  </View>
</Component>"
`;

exports[`qr code modal  renders correctly 2`] = `
Object {
  "isVisible": false,
}
`;

exports[`qr code modal  renders correctly 3`] = `
Object {
  "isVisible": false,
}
`;

exports[`qr code modal  renders correctly 4`] = `
Object {
  "isVisible": true,
}
`;

exports[`qr code modal  renders correctly 5`] = `
Object {
  "isVisible": false,
}
`;

exports[`qr code modal  renders correctly 6`] = `
Object {
  "isVisible": false,
}
`;
